# hm-postman-adoption-starter-kit

./: .env.example  .gitignore  README.md  SWOT.md  postman_ingestion.py  pyproject.toml  requirements.txt  spec_adoption.py
.github/workflows/: run-api-tests.yml  sync-specs.yml
exports/: env-dev.json  env-prod.json  env-qa.json  env-uat.json  payment-processing-api---refund-service-collection.json
